DEV: Windows performance optimizations
- C binary caching with mtime comparison (skip recompilation)
- Add --rebuild / -R flag to force recompilation
- Cache Git Bash, PowerShell, and Unix shell paths
- Cache compiler detection and config file lookups
- Cache findInPath results to eliminate where/which spawns
- Replace tasklist subprocess with process.kill(pid, 0)
- Use readdir({ withFileTypes: true }) to reduce stat() calls
- Reduce file deletion retry params (13s → 1.5s worst-case)
- Keep artifacts by default to enable caching

--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
         "start": "bun run src/index.ts",
         "prebuild": "node bin/update-version.mjs",
         "build": "bun build ./testme.ts --compile --minify --outfile dist/tm",
-        "postbuild": "cd src/modules/js && bun link && cd ../../../test && bun link testme",
+        "postbuild": "node bin/postbuild.mjs",
         "build:win": "bun build ./testme.ts --compile --minify --windows-title 'TestMe' --windows-publisher 'Embedthis Software' --windows-description 'Test runner for system projects' --outfile dist/tm.exe",
         "build:unix": "bun build ./testme.ts --compile --minify --outfile dist/tm",
         "clean": "bun bin/clean.mjs",
